--- a/15-Login_Screen/mainwindow.ui
+++ b/15-Login_Screen/mainwindow.ui
@@ -107,7 +107,7 @@
 	color: white;
 }
 QLineEdit:Focus{
-	border: 5px solid red;
+	border: 5px solid white;
 }</string>
      </property>
      <property name="alignment">
@@ -139,7 +139,7 @@ QLineEdit:Focus{
 	color: white;
 }
 QLineEdit:Focus{
-	border: 5px solid red;
+	border: 5px solid white;
 }</string>
      </property>
      <property name="echoMode">
